you can tablescan a non-existant collection SERVER-346